log/build_2025-03-11_16-29-40/week3/stderr.log
  File "/home/kisangpark/lab_training/install/week3/lib/python3.10/site-packages/week3/rrt_debug.py", line 266
    here, draw line of steering with length 1
               ^^^^
SyntaxError: invalid syntax

